--- a/extensions.json
+++ b/extensions.json
@@ -1,9 +1,9 @@
 [
   {
-    "name": "Metruyentranh",
+    "name": "TruyenQQ",
     "lang": "vi",
-    "version": "1.0.0",
-    "thumbnail": "",
-    "sourceCodeUrl": ""
+    "version": "0.0.1",
+    "thumbnail": "https://raw.githubusercontent.com/hajaulee/dotru-extensions/main/icon/truyenqq/icon.png",
+    "sourceCodeUrl": "https://raw.githubusercontent.com/hajaulee/dotru-extensions/main/extensions/vi/truyenqq.js"
   }
 ]
