--- a/extensions.json
+++ b/extensions.json
@@ -21,6 +21,13 @@
     "sourceCodeUrl": "https://raw.githubusercontent.com/hajaulee/dotru-extensions/main/extensions/vi/nettruyen.js"
   },
   {
+    "name": "KimMiNa",
+    "lang": "vi",
+    "version": "0.0.1",
+    "thumbnail": "https://kimminatt.com/wp-content/uploads/2023/02/logo.png",
+    "sourceCodeUrl": "https://raw.githubusercontent.com/hajaulee/dotru-extensions/main/extensions/vi/kimmina.js"
+  },
+  {
     "name": "SenManga",
     "lang": "ja",
     "version": "0.0.1",
